chore: add option to reposition by the mouseover target - also fix tooltip text color for dark mode

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -954,7 +954,7 @@ $slick-tooltip-border-color:                                #BFBDBD !default;
 $slick-tooltip-border:                                      2px solid #{$slick-tooltip-border-color} !default;
 $slick-tooltip-border-radius:                               4px !default;
 $slick-tooltip-font-size:                                   calc(#{$slick-font-size-base} - 1px) !default;
-$slick-tooltip-color:                                       inherit !default;
+$slick-tooltip-color:                                       $slick-text-color !default;
 $slick-tooltip-height:                                      auto !default;
 $slick-tooltip-padding:                                     7px !default;
 $slick-tooltip-width:                                       auto !default;
